Get ready for site

--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ email: david.ko@damncarousel.com
 copyright_name:
 description: "Word"
 baseurl: ""
-url: "nycdavid.github.io"
+url: "http://nycdavid.github.io"
 twitter_username:
-ithub_username: nycdavid
+github_username: nycdavid
 facebook_username:
 email_username: david.ko@damncarousel.com
 
