--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: david.ko@damncarousel.com
 copyright_name:
 description: "Word"
 baseurl: ""
-url: "http://nycdavid.github.io"
+url: "http://www.pvtmethod.com"
 twitter_username:
 github_username: nycdavid
 facebook_username:
