--- a/config.toml
+++ b/config.toml
@@ -37,7 +37,7 @@ googleAnalytics = ""
 # The list of available icons can be found at http://fontawesome.io/icons/
 
 [[menu.icon]]
-    url = "mailto:david.ko@pvtmethod.com"
+    url = "mailto:david@velvetreactor.com"
     name = "envelope-o"
     weight = 1
 
