--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 title = "RedVelvet"
 theme = "minimal"
 disqusShortname = "redvelvet-1"
-googleAnalytics = ""
+googleAnalytics = "UA-110039229-1"
 
 [params]
     author = "David Ko"
