--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ googleAnalytics = "UA-111421177-1"
 
 [params]
     author = "David Ko"
-    description = "Go basics and best practices"
+    description = "Go web framework best practices"
     githubUsername = "velvetreactor"
     accent = "red"
     showBorder = true
@@ -18,19 +18,21 @@ googleAnalytics = "UA-111421177-1"
     highlightLanguages = ["go", "ruby", "javascript"]
 
 [[menu.main]]
+    url = "/web-framework-masterclass-echo/"
+    name = "Echo Masterclass"
+    weight = 1
+
+[[menu.main]]
     url = "/"
     name = "Home"
-    weight = 1
+    weight = 2
 
 [[menu.main]]
     url = "/posts/"
     name = "Posts"
-    weight = 2
-
-[[menu.main]]
-    url = "/projects/"
-    name = "Projects"
     weight = 3
+
+
 
 # Social icons to be shown on the right-hand side of the navigation bar
 # The "name" field should match the name of the icon to be used
