--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,4 +39,7 @@ workflows:
   version: 2
   merge_to_master:
     jobs:
-      - deploy
+      - deploy:
+          filters:
+            branches:
+              only: master
